feat(file): harden metadata collection filters